src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AE_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AR12_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AR12 Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AR6_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AR6 Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_and_B_Graded_Sales_Partners__c</fullName>
        <defaultValue>0</defaultValue>
        <label>A and B Graded Sales Partners</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_and_B_Graded_Tech_Partners__c</fullName>
        <defaultValue>0</defaultValue>
        <label>A and B Graded Tech Partners</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Auto_Number__c</fullName>
        <description>For account management round robin</description>
        <displayFormat>{0}</displayFormat>
        <label>Account Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_CS_Engineer__c</fullName>
        <formula>Name&amp;&quot; (&quot;&amp;IF(ISBLANK(Customer_Success_Engineer__c),&quot;N/A)&quot;,Customer_Success_Engineer__r.Full_Name__c&amp;&quot;)&quot;)</formula>
        <label>Account (CS Engineer)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_CS_Owner_Update_Date__c</fullName>
        <formula>Name&amp;&quot; (&quot;&amp;Customer_Experience_Owner__c&amp;
IF(NOT(ISBLANK(Last_Customer_Touchpoint__c)),&quot;, &quot;&amp;TEXT(MONTH(DATEVALUE(Last_Customer_Touchpoint__c)))&amp;&quot;/&quot;&amp;
TEXT(DAY(DATEVALUE(Last_Customer_Touchpoint__c)))&amp;&quot;/&quot;&amp;
TEXT(YEAR(DATEVALUE(Last_Customer_Touchpoint__c)))&amp;&quot;)&quot;,&quot;, N/A)&quot;)</formula>
        <label>Account (CS Owner, Update Date)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Cloud_Provider__c</fullName>
        <description>This field is meant to replicate the Public_Cloud_Provider__c from the Opportunity Object.</description>
        <inlineHelpText>Please choose any relevant options, even if Turbo does not support the particular vendor.</inlineHelpText>
        <label>Account Cloud Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cloud_Providers</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Last_Reviewed__c</fullName>
        <label>Account Last Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Level__c</fullName>
        <label>Account Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Enterprise EMEA</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Commercial EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>SMB EMEA</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed EMEA</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Management_Territory__c</fullName>
        <label>Account Management Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Team__c</fullName>
        <formula>TEXT(Owner.Team__c)</formula>
        <label>Account Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_User_Safe_ID__c</fullName>
        <formula>Owner.User_Safe_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner User Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_same_as_Current_User__c</fullName>
        <formula>IF( Owner.User_Safe_ID__c  = $User.User_Safe_ID__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner same as Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Round_Robin__c</fullName>
        <formula>mod(value(Account_Auto_Number__c),4)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Round Robin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Account Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Opps_with_Registration__c</fullName>
        <description>Number of Active opportunities with an Approved Registration</description>
        <label>Active Opps with Registration</label>
        <summaryFilterItems>
            <field>Opportunity.Highest_Vendor_Status__c</field>
            <operation>equals</operation>
            <value>Approved, Submitted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>PO received, Commit, Strong Upside, Upside, Pipeline, Identify</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>system to track active partners with registrations within the last year</description>
        <label>Active Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alliance_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alliance Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amazon_Web_Services_AWS_Intent__c</fullName>
        <description>The intensity of intent of the business shown in the topic - Amazon Web Services (AWS) during last week compared to 2 years history. The different levels are Very High, High, Medium, Low and Very Low. Very High and High mean the business has consumed more than average amount of information on the topic compared to other businesses and also shown an increase compared to its own levels of consumption. Very Low and Low would mean the business has shown lower than average consumption.</description>
        <inlineHelpText>High – Companies that have sharply increased consumption of this topic in the past week
Moderate – Companies that have notably increase consumption this topic in the past week
Normal – These companies have stayed near their baseline consumption</inlineHelpText>
        <label>Amazon Web Services (AWS) Intent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Intent_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Revenue_Data_com__c</fullName>
        <description>Annual Revenue reported by data.com. To be used in conjunction with a workflow rule to update the Account Annual Revenue in the proper units (millions).

Workflow rule: Convert Data.com Annual Revenue</description>
        <label>Annual Revenue (Data.com)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Management_Tools__c</fullName>
        <label>Application Management Tools</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Puppet</fullName>
                </value>
                <value>
                    <fullName>Chef</fullName>
                </value>
                <value>
                    <fullName>Microsoft SCCM</fullName>
                </value>
                <value>
                    <fullName>Microsoft SCORCH</fullName>
                </value>
                <value>
                    <fullName>AppDynamics</fullName>
                </value>
                <value>
                    <fullName>AppNeta</fullName>
                </value>
                <value>
                    <fullName>NewReilc</fullName>
                </value>
                <value>
                    <fullName>Dynatrace</fullName>
                </value>
                <value>
                    <fullName>Solarwinds</fullName>
                </value>
                <value>
                    <fullName>ManageEngine</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Servers__c</fullName>
        <label>Application Servers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IBM Websphere (Java)</fullName>
                </value>
                <value>
                    <fullName>Oracle Weblogic (Java)</fullName>
                </value>
                <value>
                    <fullName>Red Hat JBoss (Java)</fullName>
                </value>
                <value>
                    <fullName>Apache Tomcat</fullName>
                </value>
                <value>
                    <fullName>Microsoft IIS</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Servers_other__c</fullName>
        <inlineHelpText>Fill in an application server here if it is not a picklist option.</inlineHelpText>
        <label>Application Servers (other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Registrations_Last_12_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Registrations (Last 12 Months)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Registrations_Last_6_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Registrations (Last 6 Months)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_TAM__c</fullName>
        <label>Assigned TAM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Technical_Account_Manager</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Bill_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the customer has accepted enrollment in auto billing</inlineHelpText>
        <label>Auto Bill Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Post-Sales field. Checked if Customer has no maintenance renewals greater than 6k (open or closed within last 6 months/current year). Set by BatchUpdateTaskOthers.</description>
        <label>Auto Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDR_Focus_Account_Date_Stamp__c</fullName>
        <label>BDR Focus Account Date (Stamp)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDR_Focus_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BDR Focus Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BD Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Name__c</fullName>
        <label>Billing Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Cleaned__c</fullName>
        <formula>IF(AND(LEN(BillingPostalCode)=10,CONTAINS(BillingPostalCode,&quot;-&quot;)),LEFT(BillingPostalCode,5),BillingPostalCode)</formula>
        <label>Billing Zip Cleaned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_CI_Tools_Other__c</fullName>
        <inlineHelpText>Please fill in CD/CI Tools if they are not a picklist option.</inlineHelpText>
        <label>CD/CI Tools (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_CI_Tools__c</fullName>
        <label>CD/CI Tools</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Puppet</fullName>
                </value>
                <value>
                    <fullName>Chef</fullName>
                </value>
                <value>
                    <fullName>Microsoft PowerShell</fullName>
                </value>
                <value>
                    <fullName>SaltStack</fullName>
                </value>
                <value>
                    <fullName>Ansible (Red Hat)</fullName>
                </value>
                <value>
                    <fullName>Vagrant</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIO_Level_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have we met with the CIO or their equivalent within the organization?</description>
        <inlineHelpText>Have we met with the CIO or their equivalent within the organization?</inlineHelpText>
        <label>CIO-Level Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Next_Step__c</fullName>
        <description>summary of next step in Plan for Success</description>
        <inlineHelpText>Summary of next step in Plan for Success</inlineHelpText>
        <label>CS Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Previous_Outcome__c</fullName>
        <description>Summary of most recent outcome in Plan for Success</description>
        <label>CS Previous Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_to_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Needs Attention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Help_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel Help Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Unicorn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel Unicorn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clean_account_name__c</fullName>
        <formula>IF(OR(Name=&quot;-&quot;,Name=&quot;.&quot;,Name=&quot;,&quot;,Name=&quot;&apos;&quot;,Name=&quot;/&quot;),&quot;(Unknown)&quot;,
TRIM(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
LOWER(&quot; &quot;&amp;Name&amp;&quot; &quot;),&quot;-&quot;,&quot;&quot;),
&quot;.&quot;,&quot;&quot;),
&quot;,&quot;,&quot;&quot;),
&quot;&apos;&quot;,&quot;&quot;),
&quot; co &quot;,&quot;&quot;),
&quot; company &quot;,&quot;&quot;),
&quot; inc &quot;,&quot;&quot;),
&quot; incorporated &quot;,&quot;&quot;),
&quot; ltd &quot;,&quot;&quot;),
&quot; limited &quot;,&quot;&quot;),
&quot; llc &quot;,&quot;&quot;),
&quot; corporation &quot;,&quot;&quot;),
&quot; corp &quot;,&quot;&quot;),
&quot; plc &quot;,&quot;&quot;),
&quot; llp &quot;,&quot;&quot;),
&quot; the &quot;,&quot;&quot;),
&quot; dept of &quot;,&quot;&quot;),
&quot;&amp;&quot;,&quot;and&quot;),
&quot;+&quot;,&quot;and&quot;),
&quot;saint&quot;,&quot;st&quot;)))</formula>
        <inlineHelpText>For account creation (limits the amount of account merging needed).  Formula must match similar formula on lead record.</inlineHelpText>
        <label>Clean account name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_CWOM_Opportunities__c</fullName>
        <description>Roll up of the # of closed CWOM Opportunities</description>
        <label>Closed CWOM Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>PO received, Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Cisco_Opportunity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cloud_Management_Intent__c</fullName>
        <description>The intensity of intent of the business shown in the topic - Cloud Management during last week compared to 2 years history. The different levels are Very High, High, Medium, Low and Very Low. Very High and High mean the business has consumed more than average amount of information on the topic compared to other businesses and also shown an increase compared to its own levels of consumption. Very Low and Low would mean the business has shown lower than average consumption.</description>
        <inlineHelpText>High – Companies that have sharply increased consumption of this topic in the past week
Moderate – Companies that have notably increase consumption this topic in the past week
Normal – These companies have stayed near their baseline consumption</inlineHelpText>
        <label>Cloud Management Intent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Intent_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Management_Platform_Other__c</fullName>
        <inlineHelpText>If the Cloud Management Platform is not a picklist option, please input it here.</inlineHelpText>
        <label>Cloud Management Platform (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Management_Platform__c</fullName>
        <label>Cloud Management Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VMware vCloud director</fullName>
                </value>
                <value>
                    <fullName>Microsoft VMM</fullName>
                </value>
                <value>
                    <fullName>Citrix Cloudstack</fullName>
                </value>
                <value>
                    <fullName>OpenStack</fullName>
                </value>
                <value>
                    <fullName>Abiquo</fullName>
                </value>
                <value>
                    <fullName>BMC CLM</fullName>
                </value>
                <value>
                    <fullName>CIsco CIAC</fullName>
                </value>
                <value>
                    <fullName>VMware vCAC/vRealize Automation (vRA)</fullName>
                </value>
                <value>
                    <fullName>RedHat CloudForms (ManageIQ)</fullName>
                </value>
                <value>
                    <fullName>Embotics</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure Pack/Stack</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Strategy_Intent__c</fullName>
        <description>The intensity of intent of the business shown in the topic - Cloud Strategy during last week compared to 2 years history. The different levels are Very High, High, Medium, Low and Very Low. Very High and High mean the business has consumed more than average amount of information on the topic compared to other businesses and also shown an increase compared to its own levels of consumption. Very Low and Low would mean the business has shown lower than average consumption.</description>
        <inlineHelpText>High – Companies that have sharply increased consumption of this topic in the past week
Moderate – Companies that have notably increase consumption this topic in the past week
Normal – These companies have stayed near their baseline consumption</inlineHelpText>
        <label>Cloud Strategy Intent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Intent_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Use_Case_Cloud_Migration__c</fullName>
        <description>Track cloud use cases for Mor and Dicken</description>
        <label>Cloud Use Case: Cloud Migration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cloud_Use_Cases</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Use_Case_Continuous_Control__c</fullName>
        <description>Track cloud use cases for Mor and Dicken</description>
        <label>Cloud Use Case: Continuous Control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cloud_Use_Cases</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Use_Case_Visibility__c</fullName>
        <description>Track cloud use cases for Mor and Dicken</description>
        <label>Cloud Use Case: Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cloud_Use_Cases</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compute_Vendor_Other__c</fullName>
        <inlineHelpText>Please only fill this field in if the vendor is not listed in the Compute Vendor list.</inlineHelpText>
        <label>Compute Vendor (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compute_Vendor__c</fullName>
        <label>Compute Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Lenovo/IBM</fullName>
                </value>
                <value>
                    <fullName>Oracle/Sun</fullName>
                </value>
                <value>
                    <fullName>Supermicro</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connect_Count__c</fullName>
        <label>Connect Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connected_within_Last_7_days__c</fullName>
        <formula>IF(AND( Latest_Connect_Date__c  &gt;= TODAY()-7,  Latest_Connect_Date__c &lt; TODAY()),1,0)</formula>
        <label>Connected within Last 7 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consider_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A temporary checkbox to use while we are preparing for our migration to Lightning 2.0. If checked by a user then this account needs to be considered for deletion.</description>
        <label>Consider Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <inlineHelpText>Total number of Contacts associated with this Account.</inlineHelpText>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacts_Dialed_in_Last_X_Days__c</fullName>
        <label>Contacts Dialed in Last 60 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Container_Management_Other__c</fullName>
        <description>Please list any container management vendors not in the picklist options</description>
        <label>Container Management (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container_Management__c</fullName>
        <label>Container Management</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Docker</fullName>
                </value>
                <value>
                    <fullName>CoreOS (Rocket)</fullName>
                </value>
                <value>
                    <fullName>Red Hat (Atomic)</fullName>
                </value>
                <value>
                    <fullName>Mesos</fullName>
                </value>
                <value>
                    <fullName>Kubernetes</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_Modules_In_Use__c</fullName>
        <label>Control Modules Purchased But Not In Use</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Fabric</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
                <value>
                    <fullName>Hybrid Cloud</fullName>
                </value>
                <value>
                    <fullName>VDI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converged_Infrastructure_Other__c</fullName>
        <inlineHelpText>Only fill this in if the option does not already exist in the Converged Infrastructure field.</inlineHelpText>
        <label>Converged Infrastructure (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converged_Infrastructure__c</fullName>
        <label>Converged Infrastructure</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nutanix</fullName>
                </value>
                <value>
                    <fullName>SimpliVity</fullName>
                </value>
                <value>
                    <fullName>Vblock (EMC/VCE)</fullName>
                </value>
                <value>
                    <fullName>FlexPod (Cisco/NetApp)</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversation_Count__c</fullName>
        <label>Conversation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversation_within_Last_7_days__c</fullName>
        <formula>IF(AND( Latest_Conversation_Date__c  &gt;= TODAY()-7,  Latest_Conversation_Date__c  &lt; TODAY()),1,0)</formula>
        <label>Conversation within Last 7 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Count__c</fullName>
        <label>Core Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Account_Move_Flag__c</fullName>
        <description>Re-purposed field to allow Reps to disposition their Target accounts</description>
        <inlineHelpText>Target Account size is defined as being greater than or equal to 30 Sockets.</inlineHelpText>
        <label>Focus Account Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Virtualized</fullName>
                </value>
                <value>
                    <fullName>Duplicate Account</fullName>
                </value>
                <value>
                    <fullName>HQ Not in My Territory</fullName>
                </value>
                <value>
                    <fullName>100% Outsourced to Public Cloud</fullName>
                </value>
                <value>
                    <fullName>Under Target Size</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Age_Days__c</fullName>
        <formula>IF(ISBLANK(First_Close_Date__c),NULL,TODAY()-First_Close_Date__c)</formula>
        <label>Customer Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>